# ASGI-Serverless-Template

./: .gitignore  package.json  pyproject.toml  serverless.yml
asgi/: main.py  main.py.py
asgi/app/resolvers/: schema.py
asgi/app/resolvers/query/: __init__.py  echo.py
asgi/app/schema/query/: query_root.graphql
tests/: test_lambda_test.py
