[tool.poetry]
name = "lambda_test"
version = "0.1.0"
description = ""
authors = ["Sean Aye <hello@seanaye.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
ariadne = "^0.11.0"
mangum = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
mypy = "^0.770"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
